RESOLVED FIXED84272
JSVALUE32_64 should be able to perform division on ARM without crashing, and variables forced double should not be scrambled when performing OSR entry
https://bugs.webkit.org/show_bug.cgi?id=84272
Summary JSVALUE32_64 should be able to perform division on ARM without crashing, and ...
Filip Pizlo
Reported 2012-04-18 13:18:57 PDT
Patch forthcoming.
Attachments
the patch (2.59 KB, patch)
2012-04-18 13:23 PDT, Filip Pizlo
ggaren: review+
A testcase file which is related to this patch (3.77 KB, text/html)
2013-07-25 03:57 PDT, Chen Zhixiang
no flags
Filip Pizlo
Comment 1 2012-04-18 13:23:46 PDT
Created attachment 137754 [details] the patch
Geoffrey Garen
Comment 2 2012-04-18 13:26:39 PDT
Comment on attachment 137754 [details] the patch r=me
Filip Pizlo
Comment 3 2012-04-18 15:33:33 PDT
Chen Zhixiang
Comment 4 2013-07-25 03:57:40 PDT
Created attachment 207446 [details] A testcase file which is related to this patch I have been recently investigate a calculating error problem in Sunspider math-cordic.js case, Which occurs in 2012/3's webkit, but fixed in 2013/4's webkit (qtwebkit-2.3.1), after a dozen of Git "bisect" compile, and finally I could locate to this patch,
Note You need to log in before you can comment on or make changes to this bug.